--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,8 +8,7 @@
         var l = window.location;
         var original = l.pathname + l.search + l.hash;
         try { sessionStorage.setItem('gh-pages-redirect', original); } catch(e){}
-        // Redirect all missing pages into the sdablanzaburgershop subfolder
-        l.replace('/sdablanzaburgershop/');
+        l.replace('/sdabburgershop/');
       })();
     </script>
   </head>
