Update root redirect to point to sdablanzaburgershop/home 11/02/26

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=/sdabburgershop/home" />
+    <meta http-equiv="refresh" content="0; url=/sdablanzaburgershop/home" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Redirecting</title>
-    <link rel="canonical" href="/sdabburgershop/home" />
-    <script>location.replace('/sdabburgershop/home');</script>
+    <title>Redirecting…</title>
+    <link rel="canonical" href="/sdablanzaburgershop/home" />
+    <script>location.replace('/sdablanzaburgershop/home');</script>
   </head>
   <body>
-    <p>Redirecting to <a href="/sdabburgershop/home">/sdabburgershop/home</a></p>
+    <p>Redirecting to <a href="/sdablanzaburgershop/home">/sdablanzaburgershop/home</a>…</p>
   </body>
 </html>
