Fix root redirect to point to sdablanzaburgershop root 11/02/26

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=/sdablanzaburgershop/home" />
+    <meta http-equiv="refresh" content="0; url=/sdablanzaburgershop/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Redirecting…</title>
-    <link rel="canonical" href="/sdablanzaburgershop/home" />
-    <script>location.replace('/sdablanzaburgershop/home');</script>
+    <link rel="canonical" href="/sdablanzaburgershop/" />
+    <script>location.replace('/sdablanzaburgershop/');</script>
   </head>
   <body>
     <p>Redirecting to <a href="/sdablanzaburgershop/home">/sdablanzaburgershop/home</a>…</p>
